--- a/app/src/main/res/layout/recyclerview_item_bag_item.xml
+++ b/app/src/main/res/layout/recyclerview_item_bag_item.xml
@@ -19,23 +19,19 @@
         android:text="@string/label_bag_name"
         android:textColor="@android:color/black"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView_status"
+        app:layout_constraintStart_toEndOf="@+id/imageView_chip_status"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageView_status"
+        android:id="@+id/imageView_chip_status"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/imageview_description_status"
-        android:onClick="showChipMenu"
         android:backgroundTint="@color/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
-
 
 
     <TextView
@@ -47,7 +43,7 @@
         android:fontFamily="@font/lato_medium"
         android:text="@string/label_item_quantity"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView_status"
+        app:layout_constraintStart_toEndOf="@+id/imageView_chip_status"
         app:layout_constraintTop_toBottomOf="@+id/text_view_list_item_name" />
 
     <TextView
