--- a/app/src/main/res/layout/recyclerview_item_bag_item.xml
+++ b/app/src/main/res/layout/recyclerview_item_bag_item.xml
@@ -82,4 +82,18 @@
         app:layout_constraintStart_toEndOf="@+id/textView_weight_kg"
         app:layout_constraintTop_toBottomOf="@+id/text_view_list_item_name" />
 
+
+    <ImageView
+        android:id="@+id/handle"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_gravity="center_vertical|right"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="16dp"
+        android:scaleType="center"
+        android:src="@drawable/ic_drag_handle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
