--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,12 +25,12 @@
         android:id="@+id/textView_welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="100dp"
-        android:fontFamily="@font/lato"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="270dp"
+        android:fontFamily="@font/lato_medium"
         android:text="@string/welcome_packstar"
         android:textColor="@android:color/white"
-        android:textSize="30sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
