List Item - snackbar - customization on text and action.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,8 @@
     <!--Chip Stroke-->
     <color name="chipStrokeColor">#1F000000</color>
 
+    <!--SnackBar-->
+    <color name="snackbar_undo">#BB86FC</color>
+
+
 </resources>
