--- a/app/src/main/res/layout/recyclerview_item_bag_item.xml
+++ b/app/src/main/res/layout/recyclerview_item_bag_item.xml
@@ -1,99 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/constraintlayout_item"
+    android:id="@+id/coordinatorlayout_item"
     android:layout_width="match_parent"
-    android:layout_height="68dp"
-    android:orientation="horizontal">
+    android:layout_height="68dp">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintlayout_item"
+        android:layout_width="match_parent"
+        android:layout_height="68dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_view_list_item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/lato_medium"
+            android:includeFontPadding="false"
+            android:text="@string/label_bag_name"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@+id/imageView_chip_status"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/imageView_chip_status"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="@string/imageview_description_status"
+            android:backgroundTint="@color/colorPrimary"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-        android:id="@+id/text_view_list_item_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/lato_medium"
-        android:includeFontPadding="false"
-        android:text="@string/label_bag_name"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView_chip_status"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textView_quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/lato_medium"
+            android:text="@string/label_item_quantity"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/imageView_chip_status"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_list_item_name" />
 
-    <ImageButton
-        android:id="@+id/imageView_chip_status"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:contentDescription="@string/imageview_description_status"
-        android:backgroundTint="@color/colorPrimary"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textview_quantity_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/lato_medium"
+            android:text="@string/label_item_number"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/textView_quantity"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_list_item_name" />
 
+        <TextView
+            android:id="@+id/textView_weight_kg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/lato_medium"
+            android:text="@string/label_item_weight"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/textview_quantity_value"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_list_item_name" />
 
-    <TextView
-        android:id="@+id/textView_quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/lato_medium"
-        android:text="@string/label_item_quantity"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView_chip_status"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_list_item_name" />
-
-    <TextView
-        android:id="@+id/textview_quantity_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/lato_medium"
-        android:text="@string/label_item_number"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/textView_quantity"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_list_item_name" />
-
-    <TextView
-        android:id="@+id/textView_weight_kg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/lato_medium"
-        android:text="@string/label_item_weight"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/textview_quantity_value"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_list_item_name" />
-
-    <TextView
-        android:id="@+id/textview_weight_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/lato_medium"
-        android:text="@string/label_item_number_weight"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/textView_weight_kg"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_list_item_name" />
+        <TextView
+            android:id="@+id/textview_weight_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/lato_medium"
+            android:text="@string/label_item_number_weight"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/textView_weight_kg"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_list_item_name" />
 
 
-    <ImageView
-        android:id="@+id/handle"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_gravity="center_vertical|right"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="16dp"
-        android:scaleType="center"
-        android:src="@drawable/ic_drag_handle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/handle"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="center_vertical|right"
+            android:layout_marginTop="22dp"
+            android:layout_marginEnd="16dp"
+            android:scaleType="center"
+            android:src="@drawable/ic_drag_handle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
