--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -92,12 +93,13 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chip_group"
+        android:id="@+id/chip_group_edit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="45dp"
+        android:layout_marginEnd="40dp"
+        app:chipSpacingHorizontal="52dp"
         app:chipSpacingVertical="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,46 +107,44 @@
         app:singleLine="true"
         app:singleSelection="true">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".view.activities.EditItemActivity">
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_red"
-                style="@style/Widget.MaterialComponents.Chip.Action"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:fontFamily="@font/lato"
-                android:text="@string/textView_ic_arrow_right_red"
-                android:textSize="14sp"
-                app:checkedIcon="@drawable/ic_arrow_right_red_filled"
-                app:chipBackgroundColor="@color/colorPrimary"
-                app:chipCornerRadius="5dp"
-                app:chipIcon="@drawable/ic_arrow_right_red"
-                app:chipStrokeColor="@color/chipStrokeColor"
-                app:chipStrokeWidth="1dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_red_edit"
+            style="@style/Widget.MaterialComponents.Chip.Action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="11dp"
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_green"
-                style="@style/Widget.MaterialComponents.Chip.Action"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:fontFamily="@font/lato"
-                android:text="@string/textView_ic_arrow_right_green"
-                android:textSize="14sp"
-                app:checkedIcon="@drawable/ic_arrow_right_green_filled"
-                app:chipBackgroundColor="@color/colorPrimary"
-                app:chipCornerRadius="5dp"
-                app:chipIcon="@drawable/ic_arrow_right_green"
-                app:chipStrokeColor="@color/chipStrokeColor"
-                app:chipStrokeWidth="1dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:checkable="true"
+            android:fontFamily="@font/lato"
+            android:text="@string/textView_ic_arrow_right_red"
+            android:textSize="14sp"
+            app:checkedIcon="@drawable/ic_arrow_right_red_filled"
+            app:chipBackgroundColor="@color/colorPrimary"
+            app:chipCornerRadius="5dp"
+            app:chipIcon="@drawable/ic_arrow_right_red"
+            app:chipStrokeColor="@color/chipStrokeColor"
+            app:chipStrokeWidth="1dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_green_edit"
+            style="@style/Widget.MaterialComponents.Chip.Action"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:checkable="true"
+            android:fontFamily="@font/lato"
+            android:text="@string/textView_ic_arrow_right_green"
+            android:textSize="14sp"
+            app:checkedIcon="@drawable/ic_arrow_right_green_filled"
+            app:chipBackgroundColor="@color/colorPrimary"
+            app:chipCornerRadius="5dp"
+            app:chipIcon="@drawable/ic_arrow_right_green"
+            app:chipStrokeColor="@color/chipStrokeColor"
+            app:chipStrokeWidth="1dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </com.google.android.material.chip.ChipGroup>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
