--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,9 +85,11 @@
         <item name="android:textSize">14sp</item>
     </style>
 
-    <!-- Base application theme - Pop-Up menu -->
+    <!-- Base application theme - Pop-Up menu
+    <item name="android:popupBackground">#000000</item>
+    -->
     <style name="PopupMenu" parent="@style/Widget.MaterialComponents.PopupMenu">
-        <item name="android:popupBackground">#000000</item>
+        <item name="android:popupBackground">@color/colorAccent</item>
     </style>
 
     <!-- Base application theme - TextInput -->
