--- a/app/src/main/res/menu/three_dots_menu.xml
+++ b/app/src/main/res/menu/three_dots_menu.xml
@@ -2,12 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/menu_dots_edit"
-        android:title="@string/menu_dots_edit" />
+        android:title="@string/menu_dots_edit"
+        android:icon="@drawable/ic_edit" />
 
     <item android:id="@+id/menu_dots_delete"
-        android:title="@string/menu_dots_delete" />
+        android:title="@string/menu_dots_delete"
+        android:icon="@drawable/ic_delete" />
 
     <item android:id="@+id/menu_dots_share"
-        android:title="@string/menu_dots_share" />
+        android:title="@string/menu_dots_share"
+        android:icon="@drawable/ic_share" />
 
 </menu>
