Item status - replaced for new ones. Bag/Item - limited to 999. List Bag - create floating action button to create new bag.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="34dp"
         android:layout_marginBottom="20dp"
+        android:fontFamily="@font/lato"
         android:text="@string/create_first_bag"
         android:textAlignment="viewEnd"
         android:textColor="@android:color/black"
