--- a/app/src/main/res/layout/recyclerview_list_bags.xml
+++ b/app/src/main/res/layout/recyclerview_list_bags.xml
@@ -7,6 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".view.activities.ListBagActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:elevation="6dp"
+        app:fabSize="auto"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="56dp"
+        app:srcCompat="@drawable/fab_home"
+        app:tint="@null" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_bags"
