--- a/app/src/main/res/layout/activity_create_bag.xml
+++ b/app/src/main/res/layout/activity_create_bag.xml
@@ -127,7 +127,8 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:fontFamily="@font/lato"
-                    android:inputType="numberDecimal"
+                    android:inputType="number"
+                    android:maxLength="3"
                     android:singleLine="true"
                     android:textCursorDrawable="@drawable/shape_cursor_color"
                     android:textSize="16sp"
