--- a/app/src/main/res/layout/activity_create_item.xml
+++ b/app/src/main/res/layout/activity_create_item.xml
@@ -58,6 +58,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/lato"
+            android:maxLength="3"
             android:inputType="number"
             android:singleLine="true"
             android:textCursorDrawable="@drawable/shape_cursor_color"
@@ -87,6 +88,7 @@
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/lato"
             android:inputType="numberDecimal"
+            android:maxLength="3"
             android:singleLine="true"
             android:textCursorDrawable="@drawable/shape_cursor_color"
             android:textSize="16sp" />
