--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -59,6 +59,7 @@
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/lato"
             android:inputType="number"
+            android:maxLength="3"
             android:singleLine="true"
             android:textCursorDrawable="@drawable/shape_cursor_color"
             android:textSize="16sp" />
@@ -87,6 +88,7 @@
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/lato"
             android:inputType="numberDecimal"
+            android:maxLength="3"
             android:singleLine="true"
             android:textCursorDrawable="@drawable/shape_cursor_color"
             android:textSize="16sp" />
