--- a/app/src/main/res/layout/activity_empty_bag.xml
+++ b/app/src/main/res/layout/activity_empty_bag.xml
@@ -7,52 +7,42 @@
     tools:context=".view.activities.EmptyBagActivity">
 
 
-    <TextView
-        android:id="@+id/textView_no_entry"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="48dp"
-        android:fontFamily="@font/lato"
-        android:text="@string/label_no_entry"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_empty_bag" />
-
     <ImageView
         android:id="@+id/imageView_empty_bag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="170dp"
         android:contentDescription="@string/image_empty_bag_description"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/bg_empty_bag" />
 
     <TextView
-        android:id="@+id/textView_no_entry_bag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/lato"
-        android:text="@string/label_no_entry_bag"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_no_entry" />
-
-    <TextView
         android:id="@+id/textView_add_new_bag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/lato"
         android:text="@string/label_add_new_bag"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_no_entry_bag" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_no_entry" />
+
+    <TextView
+        android:id="@+id/textView_no_entry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:fontFamily="@font/lato"
+        android:text="@string/label_no_entry"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_empty_bag" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_plus"
